<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnBackground"
    android:backgroundTint="#00000000">

    <ImageView
        android:id="@+id/transfer_page_image"
        android:layout_width="335dp"
        android:layout_height="305dp"
        android:layout_marginTop="24dp"
        android:background="#00000000"
        android:backgroundTint="#00000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/transfer_page_image" />

    <TextView
        android:id="@+id/transfer_amount"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="26dp"
        android:text="Enter Amount"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/receiver_account" />

    <EditText
        android:id="@+id/enter_transfer_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/transfer_amount"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/security_key_transfer"
        android:layout_width="150dp"
        android:layout_height="67dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:text="Security PIN"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transfer_amount" />

    <EditText
        android:id="@+id/enter_security_check_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="numberPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/security_key_transfer"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/check_balance_page_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/transfer_amount"
        android:textColor="#0F0E0E"
        android:backgroundTint="#858181"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/security_key_transfer" />

    <TextView
        android:id="@+id/transfer_page_response"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:ems="10"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/security_key_transfer" />

    <TextView
        android:id="@+id/receiver_account"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/receivers_account_number"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transfer_page_image" />

    <EditText
        android:id="@+id/enter_recievers_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="e.g. 100000000"
        android:inputType="numberDecimal"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/receiver_account"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/return_home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/back_to_home"
        android:textColor="#0F0E0E"
        android:backgroundTint="#858181"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>